--- a/templates/lab10.html
+++ b/templates/lab10.html
@@ -12,6 +12,7 @@
 
     <p>Veuiller ajouter une personne</p>
 
+    <!-- Pour eviter de mettre le style dans html, on peut donner un id et le modifier en css -->
     <p style="color:red"> 
         {% autoescape false %}
             {{ error }}
