--- a/templates/labFlask2.html
+++ b/templates/labFlask2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab-Flask</title>
+    <title>Lab-Flask-2</title>
 </head>
 <body> 
 
-    <h1>Laboratoire 10</h1>
+    <h1>Laboratoire Flask 2</h1>
 
     <p>Veuiller ajouter une personne</p>
 
@@ -23,15 +23,15 @@
         <label for="nom">Nom : </label>
         <input type="text" name="nom" value="{{ nom }}">
         <br>
-
+        <br>
         <label for="prenom">Prenom : </label>
         <input type="text" name="prenom" value="{{ prenom }}">
         <br>
-
+        <br>
         <label for="age">Age : </label>
         <input type="text" name="age" value="{{ age }}">
         <br>
-
+        <br>
         <input type="submit" value="Ajouter la personne">
     </form>
 
