--- a/templates/labFlask2.html
+++ b/templates/labFlask2.html
@@ -10,7 +10,7 @@
 
     <h1>Laboratoire Flask 2</h1>
 
-    <p>Veuiller ajouter une personne</p>
+    <p>Veuillez ajouter une personne</p>
 
     <!-- Pour eviter de mettre le style dans html,
         on peut donner un id et le modifier en css.
