--- a/templates/labFlask2.html
+++ b/templates/labFlask2.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab-Flask-2</title>
-</head>
-<body> 
-
+{% extends "layout.html"%}
+{% block content%}
     <h1>Laboratoire Flask 2</h1>
 
     <p>Veuillez ajouter une personne</p>
@@ -37,6 +29,5 @@
         <br>
         <input type="submit" value="Ajouter la personne">
     </form>
+{% endblock %}
 
-</body>
-</html>
