--- a/templates/results.html
+++ b/templates/results.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Resultats</h1>
 
-    <table>
+    <table id="table-resultat">
         <tr>
             <th>Nom</th>
             <th>Prenom</th>
@@ -25,5 +25,7 @@
         {% endfor %}
         
     </table>
+    <button class="boutton" type="submit" onclick="return trierNomAZ()">Trier A-Z</button>
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
